# monk-cli

./: .gitignore  BRIEF.md  Cargo.toml  EVALUATION_REPORT.md  FILE_WHERE_SIMPLE.md  Gemfile  INSTALL.md  PACKAGING-PHASE1-EVALUATION.md  PACKAGING.md  README.md  SCHEMA-EXPORT-ANALYSIS.md  SYNC.md  build.sh  install.sh  migrate-commands.sh  monk  package-lock.json  phase-1-summary.md  rebuild.sh  release.sh  settings.yml
docs/: AGGREGATE.md  AUTH.md  BULK.md  DATA.md  DESCRIBE.md  DOCS.md  EXAMPLES.md  FIND.md  FS.md  INIT.md  META.md  PROJECT.md  ROOT.md  SERVER.md  STATUS.md  SUDO.md  TENANT.md
examples/: README.md  aggregate-and-analyze.md  data-crud.md  describe-and-data.md  exercise-tracker-project.md  exercise-tracker.md  find-and-filter.md  getting-started.md  reading-api-docs.md  server-management.md  servers-and-tenants.md  tenant-management.md
samples/: example-schema.yaml
scripts/: install.sh
spec/: test-all.sh  test-helper.sh
src/: api.rs  api.rs.test.rs  auth_expires_command.sh  auth_import_command.sh  auth_info_command.sh  auth_list_command.sh  auth_login_command.sh  auth_logout_command.sh  auth_ping_command.sh  auth_status_command.sh  auth_token_command.sh  bashly.yml  bulk_raw_command.sh  bulk_result_command.sh  bulk_status_command.sh  bulk_submit_command.sh  cli.rs  commands.rs  commands.rs.test.rs  config.rs  data.rs  data_create_command.sh  data_delete_command.sh  data_export_command.sh  data_import_command.sh  data_list_command.sh  data_select_command.sh  data_update_command.sh  describe_delete_command.sh  describe_update_command.sh  error.rs  (+62 more)
(+226 files in other folders)
