[package]
name = "monk-cli"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Rust CLI for the Monk API"

[[bin]]
name = "monk"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
url = { version = "2", features = ["serde"] }

[profile.dev]
debug = 0
incremental = true
codegen-units = 256

[profile.dev.package."*"]
debug = 0
